--- a/JpegDisplayTestByTatsuroUeda/en.lproj/MainStoryboard.storyboard
+++ b/JpegDisplayTestByTatsuroUeda/en.lproj/MainStoryboard.storyboard
@@ -129,7 +129,7 @@
                                     <action selector="asyncDownload:" destination="yfC-6v-gEs" eventType="touchUpInside" id="gUI-0W-joj"/>
                                 </connections>
                             </button>
-                            <progressView opaque="NO" contentMode="scaleToFill" id="awK-el-7lG">
+                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" id="awK-el-7lG">
                                 <rect key="frame" x="20" y="278" width="280" height="9"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </progressView>
@@ -142,10 +142,79 @@
                         <outlet property="progressView" destination="awK-el-7lG" id="Aan-Kp-T0V"/>
                         <outlet property="syncDownloadButton" destination="QxF-tg-8cA" id="vrR-SJ-t0d"/>
                         <outlet property="urlField" destination="il0-Ps-0km" id="l2x-Gb-cG8"/>
+                        <segue destination="lAr-Jk-K3B" kind="modal" identifier="authentication" id="Di7-om-nkw"/>
                     </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="1016" y="667"/>
+        </scene>
+        <scene sceneID="q67-v1-hPb">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Mu-MJ-ybR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="lAr-Jk-K3B" customClass="AccountEditViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uni-3i-Vix">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Authentication Required" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="AHE-zj-DyE">
+                                <rect key="frame" x="20" y="42" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="Vbl-lZ-B5D">
+                                <rect key="frame" x="20" y="86" width="280" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="vSN-ZV-bvX">
+                                <rect key="frame" x="20" y="125" width="280" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="QWg-9O-M4g">
+                                <rect key="frame" x="20" y="178" width="135" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancel:" destination="lAr-Jk-K3B" eventType="touchUpInside" id="vOK-5F-aDb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kj2-JM-rP5">
+                                <rect key="frame" x="163" y="178" width="135" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Log In">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="logIn:" destination="lAr-Jk-K3B" eventType="touchUpInside" id="HWi-VI-mjE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="passwordField" destination="vSN-ZV-bvX" id="5Xp-XE-wIh"/>
+                        <outlet property="userNameField" destination="Vbl-lZ-B5D" id="HSZ-8C-HE7"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1589" y="667"/>
         </scene>
         <scene sceneID="24">
             <objects>
@@ -172,6 +241,15 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AccountEditViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AccountEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="logIn:"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="userNameField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
         <class className="JDDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/JDDetailViewController.h"/>
             <relationships>
