--- a/JpegDisplayTestByTatsuroUeda/en.lproj/MainStoryboard.storyboard
+++ b/JpegDisplayTestByTatsuroUeda/en.lproj/MainStoryboard.storyboard
@@ -237,7 +237,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Detail" id="26"/>
+                    <navigationItem key="navigationItem" title="Detail" id="26">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="xsC-bC-cyS">
+                            <connections>
+                                <action selector="upload:" destination="21" id="krr-TD-z6b"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="NZw-ee-Abv" id="ONf-yi-04g"/>
                     </connections>
@@ -259,6 +265,7 @@
         <class className="JDDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/JDDetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="upload:"/>
                 <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
             </relationships>
         </class>
